<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/unitats"
        android:layout_width="103dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="36dp"
        android:layout_weight="1"
        android:hapticFeedbackEnabled="false"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/valor"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/lenguajes"/>

    <TextView
        android:id="@+id/seg"
        android:layout_width="105dp"
        android:layout_height="26dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="260dp"
        android:text="XXX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hor"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="XXX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min" />

    <TextView
        android:id="@+id/hores"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="20dp"
        android:text="Hores"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minuts" />

    <TextView
        android:id="@+id/an"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="244dp"
        android:text="XXX"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hor"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/min"
        android:layout_width="93dp"
        android:layout_height="34dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="20dp"
        android:text="XXX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seg" />

    <TextView
        android:id="@+id/segons"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="260dp"
        android:text="@string/segons"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anys"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="20dp"
        android:text="Anys"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hores" />

    <TextView
        android:id="@+id/minuts"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="20dp"
        android:text="@string/minuts"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segons" />

    <Button
        android:id="@+id/convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="124dp"
        android:text="Convertir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="674dp"
        android:text="@string/titulo"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="255dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="193dp"
        android:text="@string/subtitol"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>